[package]
name = "popflash_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "~0.11.0"
tokio = { version = "1", features = ["full"] }
select = "0.5.0"
serde_json = "~1.0"
serde = "1.*.*"
serde_derive = "1.0"