[package]
name = "popflash_parser"
version = "2.1.0"
edition = "2021"
description = "Library for parsing data from popflash.site match links"
license-file = "./LICENSE"
repository = "https://github.com/Spum-Solutions/popflash_parser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "~0.11.0"
tokio = { version = "1", features = ["full"] }
select = "0.5.0"
serde_json = "~1.0"
serde = "1.*.*"
serde_derive = "1.0"
chrono = { version = "0.4.19", features = ["serde"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench_main"
harness = false
